--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,16 +4,18 @@ spring:
       uri: mongodb://mlops:tmax_mlops@34.125.46.122:27017/news?authSource=admin&authMechanism=SCRAM-SHA-1
 
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.158.141:3306/arena
-    username: root
-    password: root
+    driver-class-name: com.tmax.tibero.jdbc.TbDriver
+    url: jdbc:tibero:thin:@192.168.155.152:8629:tibero
+    username: tmaxfintech
+    password: tmaxfintech
 
   jpa:
+    database-platform: org.hibernate.dialect.Oracle10gDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
         format_sql: true
+
 
